fix(ads): fixed adbox visiblity bug

--- a/src/resources/css/auth.css
+++ b/src/resources/css/auth.css
@@ -6,6 +6,7 @@
     justify-content: center;
     position: relative;
     overflow: hidden;
+    padding: var(--spacing-2xl) 0 !important;
 }
 
 .auth-page::before {
